--- a/index.html
+++ b/index.html
@@ -1,11 +1,9 @@
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BTest 1</title>
+    <h1><b>Mvndi is love, Mvndi is life</b></h1>
 </head>
+    <hr>
 <body>
-    <h1>Test 2</h1>
-    <p>Test2</p>
+
 </body>
 </html>
