--- a/index.html
+++ b/index.html
@@ -2,11 +2,80 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>BTest 1</title>
+    <style>
+        ul {color: rgb(200, 100, 69);
+            font-size: large;
+            background-color: #83666688;
+            text-align: center;
+
+        }
+        .qwerty {
+color: red;
+background-color: yellow;
+        }
+    </style>
 </head>
 <body>
-    
+    <h1>Test 2</h1>
+    <p>Test2</p>
+    <h1>Hello</h1>
+    <h2>Welcome</h2>
+    <p>this is classwork</p>
+    <p>this is <br>classwork</p>
+    <hr>
+    <b>bold</b><br>
+    <i>italic</i><br>
+    <a href="https://en.wikipedia.org/wiki/Paralanguage#Huh?">Huh?</a><br>
+    <img src="https://tr.rbxcdn.com/31b116ca0b953b6f5565319800bab4be/420/420/Hat/Png">
+
+   
+
+<!-- classwork -->
+     <ul >
+        <li>1</li>
+        <li>2</li>
+        <li>3</li>
+     </ul>
+     <ol>
+        <li>1</li>
+        <li>2</li>
+        <li>3</li>
+     </ol>
+
+     <table border="10">
+        <tr>
+            <th>name</th>
+            <th>surname</th>
+        </tr>
+        <tr>
+            <td>Butuleac</td>
+            <td>Cristian</td>
+        </tr>
+        <tr>
+            <td>Butuleac</td>
+            <td>Cristian</td>
+        </tr>
+     </table>
+    <h1>header 1</h1>
+
+<p class="qwerty">head1</p>
+
+<h1>header 2</h1>
+
+<p>head2</p>
+
+<h1>header 3</h1>
+
+<p class="qwerty">head3</p>
+
+<h1>header 4</h1>
+
+<p>head4</p>
+
+<h1>header 5</h1>
+    <h1><a href="Untitled-1.html">Classwork 2</a></h2>
+
 </body>
 </html>
