--- a/Untitled-2.html
+++ b/Untitled-2.html
@@ -1,1 +1,21 @@
+<!DOCTYPE html>
 
+<html lang="en">
+
+<head>
+
+    <title>dhguigh</title>
+
+    <link rel="stylesheet" href="body.css">
+
+</head>
+
+<body>
+
+    <a href="Untitled-1.html">Home</a>
+
+    <h1>Classwork 2 about CSS Multipage</h1>
+
+</body>
+
+</html>
