--- a/index.html
+++ b/index.html
@@ -76,6 +76,11 @@ background-color: yellow;
 
 <h1>header 5</h1>
     <h1><a href="Untitled-1.html">Classwork 2</a></h2>
+     <h1><a href="18nov.html">Classwork 18nov</a></h2>
+<h1><a href="doci.html">2Classwork 18nov</a></h2>
+    <h1><a href="paint.html">Classwork paint</a></h2>
+    <h1><a href="vis.html">Classwork vis</a></h2>
+     <h1><a href="imgf.html">Classwork img filters</a></h2>
 
 </body>
 </html>
