--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ background-color: yellow;
     <h1><a href="Untitled-1.html">Classwork 2</a></h2>
      <h1><a href="18nov.html">Classwork 18nov</a></h2>
 <h1><a href="doci.html">2Classwork 18nov</a></h2>
-    <h1><a href="paint.html">Classwork paintingexercise</a></h2>
+    <h1><a href="paintingexercise.html">Classwork paintingexercise</a></h2>
     <h1><a href="vis.html">Classwork vis</a></h2>
      <h1><a href="imgf.html">Classwork filters</a></h2>
 
