--- a/vis.html
+++ b/vis.html
@@ -36,11 +36,11 @@
 
 <h3>Display</h3>
 
-<p>Some random sentence. <span class="none">Am I visible</span> Display: none </p>
+<p>I should make myself visible. <span class="none">Am I visible</span> Display: none </p>
 
-<p>Some random sentence. <span class="inline">Am I visible</span> Display: none </p>
+<p>I should make myself visible. <span class="inline">Am I visible</span> Display: none </p>
 
 
-<p>Some random sentence. <span class="block">Am I visible</span> Display: none </p>
+<p>I should make myself visible. <span class="block">Am I visible</span> Display: none </p>
 </body>
 </html>
