--- a/imgf.html
+++ b/imgf.html
@@ -26,7 +26,7 @@
 
 <div class="banner">
 
-<img src="https://static01.nyt.com/images/2022/11/29/science/00tb-cats1/merlin_194921559_c9e53b04-169a-4144-bd76-9ec2d987c35c-jumbo.jpg">
+<img src="https://images.app.goo.gl/NsNngSpAnuGPKMqP9">
 
 </div>
 
