--- a/paintingexercise.html
+++ b/paintingexercise.html
@@ -6,7 +6,7 @@
 
 <title>Document</title>
 
-<link rel="stylesheet" href="paint.css">
+<link rel="stylesheet" href="paintingexercise.css">
 
 <body>
 
