--- a/imgf.html
+++ b/imgf.html
@@ -26,7 +26,7 @@
 
 <div class="banner">
 
-<img src="https://images.app.goo.gl/NsNngSpAnuGPKMqP9">
+<img src="https://live.staticflickr.com/3818/12934619553_06ebe4183a_b.jpg">
 
 </div>
 
