--- a/Butuleac5.html
+++ b/Butuleac5.html
@@ -4,9 +4,9 @@
 
 <head>
 
-    <title>gsyte5</title>
+    <title>iwalkwithastickiwalkwithagun</title>
 
-    <link rel="stylesheet" href="18nov.css">
+    <link rel="stylesheet" href="Butuleac5.css">
 
 </head>
 
