--- a/index.html
+++ b/index.html
@@ -75,12 +75,12 @@ background-color: yellow;
 <p>head4</p>
 
 <h1>header 5</h1>
-    <h1><a href="Untitled-1.html">Classwork 2</a></h2>
+    <h1><a href="Untitled-1.html">Assignment 2</a></h2>
      <h1><a href="Butuleac5.html">Assignment 5</a></h2>
 <h1><a href="Butuleac4.html">Assignment 4</a></h2>
-    <h1><a href="paintingexercise.html">Classwork paintingexercise</a></h2>
-    <h1><a href="vis.html">Classwork vis</a></h2>
-     <h1><a href="imgf.html">Classwork filters</a></h2>
+    <h1><a href="paintingexercise.html">Assignment paintingexercise</a></h2>
+    <h1><a href="vis.html">Assignment visibility</a></h2>
+     <h1><a href="imgf.html">Assignment filters</a></h2>
 
 </body>
 </html>
